[gd_scene load_steps=3 format=3 uid="uid://b5or711yxfoj6"]

[ext_resource type="Script" path="res://ui/settings/settings.gd" id="1_6pn1u"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wqef1"]
bg_color = Color(0.345098, 0.690196, 0.372549, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4

[node name="Settings" type="Node2D"]
script = ExtResource("1_6pn1u")

[node name="Play" type="Button" parent="."]
offset_left = 639.0
offset_top = 608.0
offset_right = 708.0
offset_bottom = 664.0
theme_override_styles/normal = SubResource("StyleBoxFlat_wqef1")
text = "Play"

[node name="GridContainer" type="VBoxContainer" parent="."]
offset_left = 295.0
offset_top = 47.0
offset_right = 799.0
offset_bottom = 359.0

[node name="Seed" type="HBoxContainer" parent="GridContainer"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2

[node name="Label" type="RichTextLabel" parent="GridContainer/Seed"]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "[right]seed"
fit_content = true

[node name="TextEdit" type="TextEdit" parent="GridContainer/Seed"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TerrainTypePool" type="HBoxContainer" parent="GridContainer"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2

[node name="Label" type="RichTextLabel" parent="GridContainer/TerrainTypePool"]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "[right]terrain pool"
fit_content = true

[node name="Basic" type="TextEdit" parent="GridContainer/TerrainTypePool"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Basic"

[node name="Water" type="TextEdit" parent="GridContainer/TerrainTypePool"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Water"

[node name="Mountain" type="TextEdit" parent="GridContainer/TerrainTypePool"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Mountain"

[node name="MapRadius" type="HBoxContainer" parent="GridContainer"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2

[node name="Label" type="RichTextLabel" parent="GridContainer/MapRadius"]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "[right]map radius"
fit_content = true

[node name="TextEdit" type="TextEdit" parent="GridContainer/MapRadius"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Incl. center tile"

[node name="FoodRequirement" type="HBoxContainer" parent="GridContainer"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2

[node name="Label" type="RichTextLabel" parent="GridContainer/FoodRequirement"]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "[right]food req."
fit_content = true

[node name="TextEdit" type="TextEdit" parent="GridContainer/FoodRequirement"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TotalTurns" type="HBoxContainer" parent="GridContainer"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2

[node name="Label" type="RichTextLabel" parent="GridContainer/TotalTurns"]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "[right]total turns"
fit_content = true

[node name="TextEdit" type="TextEdit" parent="GridContainer/TotalTurns"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BaseGoldIncome" type="HBoxContainer" parent="GridContainer"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2

[node name="Label" type="RichTextLabel" parent="GridContainer/BaseGoldIncome"]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "[right]gold income"
fit_content = true

[node name="TextEdit" type="TextEdit" parent="GridContainer/BaseGoldIncome"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HandSize" type="HBoxContainer" parent="GridContainer"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2

[node name="Label" type="RichTextLabel" parent="GridContainer/HandSize"]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "[right]hand size"
fit_content = true

[node name="TextEdit" type="TextEdit" parent="GridContainer/HandSize"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
